Remove PowerMock, Move to JUnit 5, target Java 8 again. (#289)
*Issue #, if available:*

*Description of changes:*
- Move to JUnit 5.
- Move to Mockito 5.
- Remove PowerMock.
- Moved from `system-rules` to `system-stubs-jupiter` since the first is
not supported on JUnit 5.
- Updated all dependencies
- Updated the GitHub action workflow to build using JDK 17. (JDK 11
minimum is required for `system-rules-jupiter`, the library output is
still Java 8 compatible.
- Set the `maven-compiler-plugin` target version to Java 8 using
`release`. Explanation
[here](https://maven.apache.org/plugins/maven-compiler-plugin/examples/set-compiler-release.html).
- Enable auto-publish on the Maven sonatype plugin.
- Move from mockito-inline to mockito-core and its JUnit 5 plugin. The
default mockmaker _is_ mockito-inline in Mockito 5.
- Silence some test warnings by enabling dynamic agent loading. Mockito
and systemstubs use byte-buddy to intercept calls.

This also fixes code coverage output.

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>